tests/errors/type_mismatch_addition.dang
# Test type mismatch in addition
let result = "hello" + 42
